Bug 109052 - Crash in: mergedlo.dll (see comment 3)
Summary: Crash in: mergedlo.dll (see comment 3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.4.0.1 rc
Hardware: All All
: medium critical
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.0.0 target:5.4.2
Keywords:
Depends on:
Blocks: Undo-Zero-Steps
  Show dependency treegraph
 
Reported: 2017-07-10 18:22 UTC by Telesto
Modified: 2017-09-06 10:49 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["mergedlo.dll"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-07-10 18:22:01 UTC
This bug was filed from the crash reporting server and is br-3f051ebe-317f-4937-b9b6-896350eadde3.
=========================================

1. Open http://www.cs.rpi.edu/~moorthy/Courses/S04/modcomp/class14.ppt
3. Select All Sheets in the slides pane (CTRL+A)
3. Sidebar -> Master Pages
4. Select a template and apply
5. Select a second template and apply -> Crash

Also with:
Version: 6.0.0.0.alpha0+
Build ID: 7b4f4f15971047664fa278fff96b959d53b272b3
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-07-08_00:29:31
Locale: nl-NL (nl_NL); Calc: CL
Comment 1 Telesto 2017-07-10 18:57:54 UTC
No repro with
Versie: 5.3.3.1 
Build ID: 46360c72c4823cefeaa85af537fba22bd568da7e
CPU Threads: 4; Versie besturingssysteem:Windows 6.2; UI Render: standaard; Layout-Engine: nieuw; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 2 Xisco Faulí 2017-07-10 19:35:15 UTC
I can't reproduce it in

Version: 6.0.0.0.alpha0+
Build ID: 7931ef2abbcef22de5cdddd26738e4dd8d1d8ca5
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

nor in

Version: 6.0.0.0.alpha0+
Build ID: cb37c5f0f3de7b545231a53d46a5271058af76ad
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-06-23_06:55:41
Locale: es-ES (es_ES); Calc: group
Comment 3 Telesto 2017-07-10 20:50:59 UTC
Hmm, I changed the default undo setting to zero (and I forgot about it).
Looks like a follow-up of bug 108833 

1. Open LibO
2. Set the undo count to zero (https://help.libreoffice.org/Common/Memory#Number_of_undo_steps)
3. Open http://www.cs.rpi.edu/~moorthy/Courses/S04/modcomp/class14.ppt
4. Select All Sheets in the slides pane (CTRL+A)
5. Sidebar -> Master Pages
6. Select a template and apply
7. Select a second template and apply -> Crash
Comment 4 Telesto 2017-07-25 15:20:44 UTC
Comment 3 is still reproducible
Version: 6.0.0.0.alpha0+
Build ID: 425c68a316a5682696ac29f54f5e99c005685fc1
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-07-24_00:59:05
Locale: nl-NL (nl_NL); Calc: CL
Comment 5 raal 2017-07-25 17:33:12 UTC
(In reply to Telesto from comment #3)
> Hmm, I changed the default undo setting to zero (and I forgot about it).
> Looks like a follow-up of bug 108833 
> 
> 1. Open LibO
> 2. Set the undo count to zero
> (https://help.libreoffice.org/Common/Memory#Number_of_undo_steps)
> 3. Open http://www.cs.rpi.edu/~moorthy/Courses/S04/modcomp/class14.ppt
> 4. Select All Sheets in the slides pane (CTRL+A)
> 5. Sidebar -> Master Pages
> 6. Select a template and apply
> 7. Select a second template and apply -> Crash

Reproducible
Version: 6.0.0.0.alpha0+
Build ID: e0bafa78e3ad0df397d78cd65ad19bd5b07dc5f2
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-07-20_22:42:49

Crashes at step 6.
Comment 6 Commit Notification 2017-09-02 05:30:38 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a726c69ffef2533545e316172e3e1494b8ad327e

tdf#109052: Crash after PPT import when undo is disabled

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2017-09-06 10:23:07 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bf8ba674089cea3b335c0668a40bc42274f4146a&h=libreoffice-5-4

tdf#109052: Crash after PPT import when undo is disabled

It will be available in 5.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.