tdf#109052: Crash after PPT import when undo is disabled

It was not a good idea to enable undo unconditionally.
Use the saved undo state instead.

Change-Id: I60875da23466b6ef54f034b447d636bdbab38151
Reviewed-on: https://gerrit.libreoffice.org/41823
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
Tested-by: Tamás Zolnai <tamas.zolnai@collabora.com>
(cherry picked from commit a726c69ffef2533545e316172e3e1494b8ad327e)
Reviewed-on: https://gerrit.libreoffice.org/41825
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>